# ts-apple-fm-sdk

./: .gitignore  .npmignore  AGENTS.md  LICENSE  README.md  build.sh  package.json  tsconfig.json  vitest.config.ts
.agents/: implementation-readout.md
examples/: README.md  simple-inference.ts  streaming.ts  transcript-processing.ts  transcript.json
native/: Cargo.toml  build.rs
native/src/: lib.rs
scripts/: release.sh  validate-readme-examples.ts  verify-package.mjs
src/: core.ts  errors.ts  generable.ts  generation-guide.ts  generation-options.ts  generation-schema.ts  index.ts  prompt.ts  session.ts  tool-bridge.ts  tool.ts  transcript.ts  type-conversion.ts
src/ffi/: bindings.ts  events.ts  helpers.ts  managed-object.ts  native.ts  pointer.ts  types.ts
tests/: core.test.ts  errors.test.ts  examples.test.ts  generation-options.test.ts  guided-generation.test.ts  guides.test.ts  prompts.test.ts  session.test.ts  streaming.test.ts  token-count.test.ts  tool.test.ts  transcript.test.ts
tests/helpers/: schemas.ts  tools.ts
